# test-agent

./: .env.example  .gitignore  API_DOCUMENTATION.md  DESIGN_SYSTEM_TOOLS_GUIDE.md  Dockerfile  FIXED_TEMPLATE_IMPLEMENTATION.md  LAYOUT_GENERATOR_INTEGRATION_COMPLETE.md  LLM_ONLY_UPDATE.md  MODEL_SELECTION_GUIDE.md  Makefile  QUERY_GENERATION_SUMMARY.md  README.md  SETUP_GUIDE.md  VIEW_TYPES_SUMMARY.md  banking_crm_queries_2000.csv  banking_crm_queries_2000.json  banking_crm_queries_2000.txt  component_analysis.py  demo_view_components.py  design_system_agent_graph_v2.mmd  docker-compose.yml  export_queries.py  generate_corrected_patterns.py  pyproject.toml  requirements-prod.txt  requirements.txt  run.bat  run.ps1  sample_primitive_components.json  setup.py  setup_diagnostic.py  show_query_stats.py  start-dev.ps1  start-dev.sh  start-prod.ps1  test-dataset-generation.ps1  test_bind_tools_comparison.py  test_complex_queries.py  test_data_filling.py  test_design_system_tools.py  (+14 more)
.github/workflows/: ci.yml
design_system_agent/: __init__.py  sample_com.json
design_system_agent/agent/: __init__.py  agent_controller.py  graph_agent.py  layout_graph_agent.py  layout_graph_builder.py  models.py
design_system_agent/api/: main.py  router.py  types.py
design_system_agent/core/: component_types.py
design_system_agent/vector_index/: crm_layouts.faiss
docs/: COMPONENT_ARCHITECTURE.md  INTELLIGENT_QUERY_ANALYSIS.md  MODULAR_ARCHITECTURE.md  MULTI_FORMAT_OUTPUT.md
examples/: README.md  dataset_api_demo.py  rag_factory_example.py  test_dataset_api.py
query_patterns/account/: ADVANCED_AGGREGATE_RELATED.txt  AGGREGATE.txt  BRANCH_MANAGER_QUERIES.txt  LIST_ADVANCED.txt  (+2 more)
tests/: conftest.py  test_api.py
(+203 files in other folders)
