[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "design-system-agent"
version = "0.1.0"
description = "AI-powered design system agent for component generation and recommendations"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "openai>=1.54.4",
    "anthropic>=0.39.0",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.8",
    "langchain-anthropic>=0.3.0",
    "faiss-cpu>=1.9.0",
    "chromadb>=0.5.20",
    "sentence-transformers>=3.3.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "flake8>=7.1.1",
    "mypy>=1.13.0",
]

[project.scripts]
design-system-agent = "design_system_agent.api.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["design_system_agent*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
